# zerotrace

./: .gitmodules
zt-client/: CMakeLists.txt  cert.cpp  designdoc.md  dev.cpp  gui.cpp  main.cpp  wipe.cpp
zt-client/include/: cert.hpp  dev.hpp  gui.hpp  wipe.hpp
